# qabstractlistmodel-with-qml-listview

./: .gitignore  CMakeLists.txt  Main.qml  README.md  animalabstractlistmodel.cpp  animalabstractlistmodel.h  animalmodel.h  main.cpp  printservice.h
